; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_abx500.c_max_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_abx500.c_max_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.abx500_temp = type { i64*, i32 }
%struct.sensor_device_attribute = type { i64 }

@DEFAULT_MAX_TEMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64)* @max_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.abx500_temp*, align 8
  %12 = alloca %struct.sensor_device_attribute*, align 8
  %13 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %14 = load %struct.device*, %struct.device** %6, align 8
  %15 = call %struct.abx500_temp* @dev_get_drvdata(%struct.device* %14)
  store %struct.abx500_temp* %15, %struct.abx500_temp** %11, align 8
  %16 = load %struct.device_attribute*, %struct.device_attribute** %7, align 8
  %17 = call %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute* %16)
  store %struct.sensor_device_attribute* %17, %struct.sensor_device_attribute** %12, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @kstrtol(i8* %18, i32 10, i64* %10)
  store i32 %19, i32* %13, align 4
  %20 = load i32, i32* %13, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %4
  %23 = load i32, i32* %13, align 4
  store i32 %23, i32* %5, align 4
  br label %46

24:                                               ; preds = %4
  %25 = load i64, i64* %10, align 8
  %26 = load i32, i32* @DEFAULT_MAX_TEMP, align 4
  %27 = call i64 @clamp_val(i64 %25, i32 0, i32 %26)
  store i64 %27, i64* %10, align 8
  %28 = load %struct.abx500_temp*, %struct.abx500_temp** %11, align 8
  %29 = getelementptr inbounds %struct.abx500_temp, %struct.abx500_temp* %28, i32 0, i32 1
  %30 = call i32 @mutex_lock(i32* %29)
  %31 = load i64, i64* %10, align 8
  %32 = load %struct.abx500_temp*, %struct.abx500_temp** %11, align 8
  %33 = getelementptr inbounds %struct.abx500_temp, %struct.abx500_temp* %32, i32 0, i32 0
  %34 = load i64*, i64** %33, align 8
  %35 = load %struct.sensor_device_attribute*, %struct.sensor_device_attribute** %12, align 8
  %36 = getelementptr inbounds %struct.sensor_device_attribute, %struct.sensor_device_attribute* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = getelementptr inbounds i64, i64* %34, i64 %37
  store i64 %31, i64* %38, align 8
  %39 = load %struct.abx500_temp*, %struct.abx500_temp** %11, align 8
  %40 = call i32 @threshold_updated(%struct.abx500_temp* %39)
  %41 = load %struct.abx500_temp*, %struct.abx500_temp** %11, align 8
  %42 = getelementptr inbounds %struct.abx500_temp, %struct.abx500_temp* %41, i32 0, i32 1
  %43 = call i32 @mutex_unlock(i32* %42)
  %44 = load i64, i64* %9, align 8
  %45 = trunc i64 %44 to i32
  store i32 %45, i32* %5, align 4
  br label %46

46:                                               ; preds = %24, %22
  %47 = load i32, i32* %5, align 4
  ret i32 %47
}

declare dso_local %struct.abx500_temp* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute*) #1

declare dso_local i32 @kstrtol(i8*, i32, i64*) #1

declare dso_local i64 @clamp_val(i64, i32, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @threshold_updated(%struct.abx500_temp*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
